fix alignment

--- a/themes/PaperMod/assets/css/common/404.css
+++ b/themes/PaperMod/assets/css/common/404.css
@@ -1,8 +1,6 @@
 .main {
-    align-items: center;
     min-height: calc(100vh - var(--header-height) - var(--footer-height));
-        display: flex;
-            justify-content: center;
+    display: flex;
 }
 
 .not-found {
