--- a/themes/PaperMod/assets/css/common/main.css
+++ b/themes/PaperMod/assets/css/common/main.css
@@ -5,6 +5,7 @@
     padding: var(--gap); */
     flex: 1;
     display: flex;
+    flex-direction: column;
 }
 
 
