--- a/themes/PaperMod/assets/css/common/post-single.css
+++ b/themes/PaperMod/assets/css/common/post-single.css
@@ -1,6 +1,6 @@
 .page-header,
 .post-header {
-    margin: 24px auto var(--content-gap) auto;
+    margin: 24px 0 var(--content-gap);
 }
 
 .post-title {
